prost-canonical-serde/tests/ui/tag_on_enum.stderr
error: tag is not supported on enums in prost-canonical-serde
 --> tests/ui/tag_on_enum.rs:6:1
  |
6 | #[serde(tag = "type")]
  | ^
